--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,20 @@
-application: stefans-tvcal
+application: tvdb-ical
 version: 1
 runtime: python27
 api_version: 1
 threadsafe: no
 
 handlers:
-- url: /.*
+- url: /search/.*
   script: tvcal.app
+
+- url: /tvdb-ical/.*
+  script: tvcal.app
+
+- url: /
+  static_files: dist/index.html
+  upload: dist/index.html
+
+- url: /
+  static_dir: dist
+
