do not upload app and node_modules to app engine

--- a/app.yaml
+++ b/app.yaml
@@ -18,3 +18,12 @@ handlers:
 - url: /
   static_dir: dist
 
+skip_files:
+- ^(.*/)?#.*#
+- ^(.*/)?.*~
+- ^(.*/)?.*\.py[co]
+- ^(.*/)?.*/RCS/.*
+- ^(.*/)?\..*
+- ^node_modules
+- ^test
+- ^app
