--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,7 @@ application: tvdb-ical
 version: 1
 runtime: python27
 api_version: 1
-threadsafe: no
+threadsafe: yes
 
 handlers:
 - url: /search/.*
