--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   },
   "scripts": {
     "test": "grunt test"
+  },
+  "repository": {
+        "type": "git",
+        "url": "https://github.com/someone561/tvcal.git"
   }
 }
